--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "laravel/tinker": "^1.0",
         "laravel/ui": "^1.2",
         "pusher/pusher-php-server": "^4.1",
-        "spatie/flysystem-dropbox": "^1.2"
+        "spatie/flysystem-dropbox": "^1.2",
+        "yajra/laravel-datatables-oracle": "~9.0"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
