--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,9 @@
         "laravel/framework": "^6.2",
         "laravel/tinker": "^1.0",
         "laravel/ui": "^1.2",
+        "owen-it/laravel-auditing": "^10.0",
         "pusher/pusher-php-server": "^4.1",
+        "rap2hpoutre/laravel-log-viewer": "^2.2",
         "spatie/flysystem-dropbox": "^1.2",
         "yajra/laravel-datatables-oracle": "~9.0"
     },
