--- a/composer.json
+++ b/composer.json
@@ -14,9 +14,12 @@
         "fruitcake/laravel-cors": "^2.0",
         "intervention/image": "^2.5",
         "laravel/framework": "^6.2",
+        "laravel/passport": "^9.4",
         "laravel/tinker": "^1.0",
         "laravel/ui": "^1.2",
+        "owen-it/laravel-auditing": "^10.0",
         "pusher/pusher-php-server": "^4.1",
+        "rap2hpoutre/laravel-log-viewer": "^2.2",
         "spatie/flysystem-dropbox": "^1.2"
     },
     "require-dev": {
