--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "fruitcake/laravel-cors": "^2.0",
         "intervention/image": "^2.5",
         "laravel/framework": "^6.2",
+        "laravel/passport": "^9.4",
         "laravel/tinker": "^1.0",
         "laravel/ui": "^1.2",
         "pusher/pusher-php-server": "^4.1",
