--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "intervention/image": "^2.5",
         "laravel/framework": "^6.2",
         "laravel/passport": "^9.4",
+        "laravel/socialite": "^5.5",
         "laravel/tinker": "^1.0",
         "laravel/ui": "^1.2",
         "owen-it/laravel-auditing": "^10.0",
