--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -1,8 +1,9 @@
 ---
 deployment:
   tasks:
-    - export DEPLOYPATH=/home/u162198909/domains/lorenzogeliztienda.com/public_html/demo/laravel
+    - export DEPLOYPATH=/home/u162198909/domains/demo.lorenzogeliztienda.com/laravel
+    - /bin/mkdir $DEPLOYPATH
     - /bin/rsync -a --exclude 'public' * $DEPLOYPATH
-    - export DEPLOYPATH=/home/u162198909/domains/lorenzogeliztienda.com/public_html/demo
+    - export DEPLOYPATH=/home/u162198909/domains/demo.lorenzogeliztienda.com/
     - /bin/cp -r ./public/ * $DEPLOYPATH
     
