prueba deploy subdominio demo git

--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -1,11 +1,9 @@
 ---
 deployment:
   tasks:
-    # - export DEPLOYPATH=/home/u162198909/domains/lorenzogeliztienda.com/demo/laravel
-    #- /bin/mkdir $DEPLOYPATH
-    - export DEPLOYPATH=/home/u162198909/public_html/demo/laravel
+    - export DEPLOYPATH=/home/u162198909/demo.lorenzogeliztienda.com/laravel
     - /bin/cp .env.example * $DEPLOYPATH/.env
     - /bin/rsync -a --exclude 'public' * $DEPLOYPATH
-    - export DEPLOYPATH=/home/u162198909/public_html/demo
+    - export DEPLOYPATH=/home/u162198909/demo.lorenzogeliztienda.com
     - /bin/cp -r ./public/ * $DEPLOYPATH
     
