--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -1,9 +1,9 @@
 ---
 deployment:
   tasks:
-    - export DEPLOYPATH=/home/u162198909/demo.lorenzogeliztienda.com/laravel
-    - /bin/cp .env.example * $DEPLOYPATH/.env
+    - export DEPLOYPATH=/home/u162198909/lorenzogeliztienda.com/public_html/demo/laravel
+    # - /bin/cp .env.example * $DEPLOYPATH/.env
     - /bin/rsync -a --exclude 'public' * $DEPLOYPATH
-    - export DEPLOYPATH=/home/u162198909/demo.lorenzogeliztienda.com
+    - export DEPLOYPATH=/home/u162198909/lorenzogeliztienda.com/public_html/demo
     - /bin/cp -r ./public/ * $DEPLOYPATH
     
