--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -3,6 +3,7 @@ deployment:
   tasks:
     # - export DEPLOYPATH=/home/u162198909/public_html/demo/
     - export DEPLOYPATH=/home/u162198909/demo.lorenzogeliztienda.com/laravel
+    - /bin/mkdir $DEPLOYPATH
     - /bin/cp .env.example * $DEPLOYPATH/.env
     - /bin/rsync -a --exclude 'public' * $DEPLOYPATH
     # - export DEPLOYPATH=/home/u162198909/lorenzogeliztienda.com/public_html/demo
