--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -2,11 +2,11 @@
 deployment:
   tasks:
     # - export DEPLOYPATH=/home/u162198909/public_html/demo/
-    - export DEPLOYPATH=/home/u162198909/demo.lorenzogeliztienda.com/laravel
+    - export DEPLOYPATH=/home/u162198909/domains/lorenzogeliztienda.com/public_html/demo/laravel
     - /bin/mkdir $DEPLOYPATH
     - /bin/cp .env.example * $DEPLOYPATH/.env
     - /bin/rsync -a --exclude 'public' * $DEPLOYPATH
     # - export DEPLOYPATH=/home/u162198909/lorenzogeliztienda.com/public_html/demo
-    - export DEPLOYPATH=/home/u162198909/demo.lorenzogeliztienda.com/
+    - export DEPLOYPATH=/home/u162198909/domains/lorenzogeliztienda.com/public_html/demo/
     - /bin/cp -r ./public/ * $DEPLOYPATH
     
