--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -3,7 +3,9 @@ deployment:
   tasks:
     - export ROOT=/home/u162198909/domains/lorenzogeliztienda.com/public_html/app/laravel
     #- /bin/ls -A -I ".git" -I "public" | /bin/xargs -I % /bin/cp -ru % $ROOT
-    - /bin/cp -R .vscode $DEPLOYPATH
+    - /bin/rm -Rf $DEPLOYPATH
+    - /bin/mkdir $DEPLOYPATH
+    - /bin/cp -R $DEPLOYPATH
     # print without copy : - /bin/ls -A -I ".git" -I "public" | /bin/xargs -t -I % /bin/cp -ru % $ROOT
 
     #- export PUBLIC=/home/u162198909/domains/lorenzogeliztienda.com/public_html/app/
