--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "owen-it/laravel-auditing": "^10.0",
         "pusher/pusher-php-server": "^4.1",
         "rap2hpoutre/laravel-log-viewer": "^2.2",
-        "spatie/flysystem-dropbox": "^1.2"
+        "spatie/flysystem-dropbox": "^1.2",
+        "livewire/livewire": "^1.0"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
