--- a/composer.json
+++ b/composer.json
@@ -11,18 +11,22 @@
         "php": "^7.2",
         "barryvdh/laravel-debugbar": "~3.1",
         "barryvdh/laravel-dompdf": "^0.8.6",
+        "epayco/epayco-php": "^1.6",
         "fideloper/proxy": "^4.0",
         "fruitcake/laravel-cors": "^2.0",
+        "guzzlehttp/guzzle": "^7.9",
         "intervention/image": "^2.5",
         "laravel/framework": "^7.0",
         "laravel/passport": "~9.0",
+        "laravel/socialite": "^4.0.0",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.5",
+        "livewire/livewire": "^1.0",
         "owen-it/laravel-auditing": "^10.0",
         "pusher/pusher-php-server": "^4.1",
         "rap2hpoutre/laravel-log-viewer": "^2.2",
         "spatie/flysystem-dropbox": "^1.2",
-        "livewire/livewire": "^1.0"
+        "stripe/stripe-php": "^16.2"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
